# CDPR_Motion_Control_with_PPO

./: .gitignore  Applications of Proximal Policy Optimization.docx  CONTRIBUTING.md  LICENSE  README.md  ppo_data.xlsx  ppo_model_19.py  pyproject.toml  requirements.txt
src/cdpr_ppo/: __init__.py  cli.py  data.py  env.py  model.py  trainer.py
tests/: test_environment.py
